modified:   backend/projects/67c6fa11da157deb3b19b652/hello.js 	renamed:    backend/projects/67ee37c2edbbfd8ecd508d91/hello.java -> backend/projects/67c6fa11da157deb3b19b652/hi.js 	modified:   backend/projects/67c6fa11da157deb3b19b652/second.js 	new file:   backend/projects/680d4044367d12ad5cb97ed3/la.js 	new file:   backend/projects/680d691def29deeb282587ba/gsjywg.js 	modified:   backend/server.js 	modified:   frontend/src/App.js 	modified:   frontend/src/components/Chat.js 	modified:   frontend/src/components/ChatWindow.js 	modified:   frontend/src/components/Codespace.js 	modified:   frontend/src/components/Footer.js 	modified:   frontend/src/components/Home.js 	modified:   frontend/src/components/Navbar.js 	modified:   frontend/src/styles/Chat.css 	modified:   frontend/src/styles/Codespace.css

--- a/frontend/src/styles/Codespace.css
+++ b/frontend/src/styles/Codespace.css
@@ -69,6 +69,7 @@
     display: grid;
     grid-template-columns: 280px 1fr 320px;
     gap: 1px;
+    margin-top: 2rem;
     height: calc(100vh - 64px);
     background: var(--background);
 }
